<resources>
    <string name="app_name">Aplicatie_2</string>
    <string name="orange_text">This is and orange TextView</string>
    <string name="green_text">This is an green TextView</string>
    <string name="blue_text">This is a blue TextView</string>
    <string name="btn_blue_text">This is a blue button</string>
    <string name="btn_green_text">This is a green button</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">NO</string>
</resources>
